[fix] 修改显示效果