@@ -1,10 +1,9 @@
 package com.kim.omgchat.utils;
 
-import sun.misc.BASE64Encoder;
-
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Objects;
 
 public class EncodeUtil {
@@ -22,8 +21,11 @@ public class EncodeUtil {
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
-        BASE64Encoder base64en = new BASE64Encoder();
+
+        Base64.Encoder encoder = Base64.getEncoder();
+//        JDK 10 sun.misc套件提供的base64编解码方式已经被删除
+//        BASE64Encoder base64en = new BASE64Encoder();
         //加密后的字符串
-        return base64en.encode(Objects.requireNonNull(md5).digest(str.getBytes(StandardCharsets.UTF_8)));
-    }
+        return encoder.encodeToString(Objects.requireNonNull(md5).digest(str.getBytes(StandardCharsets.UTF_8)));
+     }
 }
